syntax = "proto3";

package api.inventory.v1beta1;

import "google/protobuf/empty.proto";
import public "inventory/v1beta1/error.proto";
import public "inventory/v1beta1/k8s_cluster.proto";

service K8sClustersService {
  rpc CreateK8sClusterinKessel (CreateK8sClusterinKesselRequest) returns (K8sCluster);

  rpc DeleteK8sCluster (DeleteK8sClusterRequest) returns (google.protobuf.Empty);

  rpc UpdateK8sCluster (UpdateK8sClusterRequest) returns (google.protobuf.Empty);

}

message CreateK8sClusterinKesselRequest {
  // The k8s cluster to create in Kessel Asset Inventory
  K8sCluster k8sCluster = 1;

}

message DeleteK8sClusterRequest {
  // The {resource} format \"<reporter_data.reporter_type>:<reporter_data.reporter_id>::<reporter_data.resourceId_alias>\".
  string resource = 1;

}

message UpdateK8sClusterRequest {
  // The {resource} format \"<reporter_data.reporter_type>:<reporter_data.reporter_id>::<reporter_data.resourceId_alias>\".
  string resource = 1;
  // The k8s clsuter to update
  K8sCluster k8sCluster = 2;

}

