syntax = "proto3";

package kessel.inventory.v1beta1;

import "kessel/inventory/v1beta1/k8s_cluster_detail_nodes_inner.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message K8sClusterDetail {

  // The OCP cluster ID or ARN etc for *KS
  string external_cluster_id = 219571597;

  // the aggregate status of the cluster
  enum ClusterStatusEnum {
    CLUSTER_STATUS_ENUM_UNKNOWN_UNSPECIFIED = 0;
    CLUSTER_STATUS_ENUM_READY = 1;
    CLUSTER_STATUS_ENUM_FAILED = 2;
    CLUSTER_STATUS_ENUM_OFFLINE = 3;
  }

  ClusterStatusEnum cluster_status = 499346904;

  // The version of kubernetes
  string kube_version = 395858490;

  // The kubernetes vendor
  enum KubeVendorEnum {
    KUBE_VENDOR_ENUM_UNKNOWN_UNSPECIFIED = 0;
    KUBE_VENDOR_ENUM_OTHER = 1;
    KUBE_VENDOR_ENUM_AKS = 2;
    KUBE_VENDOR_ENUM_EKS = 3;
    KUBE_VENDOR_ENUM_IKS = 4;
    KUBE_VENDOR_ENUM_OPENSHIFT = 5;
    KUBE_VENDOR_ENUM_GKE = 6;
  }

  KubeVendorEnum kube_vendor = 264191642;

  // The version of the productized kubernetes distribution
  string vendor_version = 23961827;

  // The platform on which this cluster is hosted
  enum CloudPlatformEnum {
    CLOUD_PLATFORM_ENUM_UNSPECIFIED = 0;
    CLOUD_PLATFORM_ENUM_NONE_UPI = 1;
    CLOUD_PLATFORM_ENUM_BAREMETAL_IPI = 2;
    CLOUD_PLATFORM_ENUM_BAREMETAL_UPI = 3;
    CLOUD_PLATFORM_ENUM_AWS_IPI = 4;
    CLOUD_PLATFORM_ENUM_AWS_UPI = 5;
    CLOUD_PLATFORM_ENUM_AZURE_IPI = 6;
    CLOUD_PLATFORM_ENUM_AZURE_UPI = 7;
    CLOUD_PLATFORM_ENUM_IBMCLOUD_IPI = 8;
    CLOUD_PLATFORM_ENUM_IBMCLOUD_UPI = 9;
    CLOUD_PLATFORM_ENUM_KUBEVIRT_IPI = 10;
    CLOUD_PLATFORM_ENUM_OPENSTACK_IPI = 11;
    CLOUD_PLATFORM_ENUM_OPENSTACK_UPI = 12;
    CLOUD_PLATFORM_ENUM_GCP_IPI = 13;
    CLOUD_PLATFORM_ENUM_GCP_UPI = 14;
    CLOUD_PLATFORM_ENUM_NUTANIX_IPI = 15;
    CLOUD_PLATFORM_ENUM_NUTANIX_UPI = 16;
    CLOUD_PLATFORM_ENUM_VSPHERE_IPI = 17;
    CLOUD_PLATFORM_ENUM_VSPHERE_UPI = 18;
    CLOUD_PLATFORM_ENUM_OVIRT_IPI = 19;
  }

  CloudPlatformEnum cloud_platform = 476768062;

  repeated K8sClusterDetailNodesInner nodes = 75440785;
}
